# STOCK_PRICE_PREDICTION

LstmTrader - Copy/: app.py  pyproject.toml
LstmTrader - Copy/attached_assets/: Pasted--MINOR-PROJECT-REPORT-ON-ALGORION-AI-DRIVEN-ALGORITHMIC-TRADING-PLATFORM--1741381844526.txt
LstmTrader - Copy/models/: lstm_model.py
LstmTrader - Copy/utils/: data_processor.py  stock_recommender.py  technical_indicators.py
