[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.1",
    "torch>=2.6.0",
    "twilio>=9.4.6",
    "yfinance>=0.2.54",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
